--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.7/tailwind.min.css">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./scr/style.css">
   </head>
   <body>
+    <h1 class=" bg-yellow-500">
+      Tran Ngoc Duy
+    </h1>
+    <a href="/">Home Page</a>
+    <a href="/about">About Page</a>
     <div id="app"></div>
-    <script type="module" src="./scr/page/demo/show.js"></script>
+
+    
+    <script type="module" src="./scr/main.js"></script>
   </body>
 </html>
